force-app/main/default/objects/smagicinteract__Object_Metadata_Config__c/smagicinteract__Object_Metadata_Config__c.object-meta.xml
<CustomObject>
    <label>Object Metadata Config</label>
    <nameField>
        <label>Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Metadata Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>