force-app/main/default/objects/smagicinteract__Object_Metadata_Config__c/fields/smagicinteract__Metadata_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Metadata_Id__c</fullName>
    <description>This field contains ID information of the page created through Interact package.</description>
    <label>Metadata Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>