force-app/main/default/objects/smagicinteract__Object_Metadata_Config__c/fields/smagicinteract__Metadata_Label__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Metadata_Label__c</fullName>
    <description>stores label of page or button created through interact package.</description>
    <label>Metadata Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>