force-app/main/default/objects/smagicinteract__Object_Metadata_Config__c/fields/smagicinteract__Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Metadata_Type__c</fullName>
    <description>Stores purpose of record. Valid values can be Page or Button.</description>
    <label>Metadata Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Page</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>