force-app/main/default/objects/smagicinteract__Object_Metadata_Config__c/fields/smagicinteract__Parent_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Parent_Object_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives information of parent object for which page or button is created.</description>
    <label>Parent Object Id</label>
    <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
    <relationshipLabel>Object Metadata Config</relationshipLabel>
    <relationshipName>Object_Metadata_Config</relationshipName>
    <type>Lookup</type>
</CustomField>